[CL-203] fix select options position (#8151)
* add relative to body

* remove scrollbar positon hack

--- a/apps/web/src/scss/base.scss
+++ b/apps/web/src/scss/base.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   min-width: 1010px;
+  position: relative;
 
   &.layout_frontend {
     @media (prefers-color-scheme: dark) {
